--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.74.4",
     "ai": "2.2.31",
     "antd": "^5.24.7",
+    "axios": "^1.8.4",
     "framer-motion": "^12.7.4",
     "next": "14.0.3",
     "openai": "4.16.1",
