--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.0.3",
     "openai": "4.16.1",
     "react": "18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
