--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "framer-motion": "^12.7.4",
+    "html-react-parser": "^5.2.3",
     "next": "14.0.3",
     "openai": "4.16.1",
     "react": "18.2.0",
